--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.show-sql=true
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.continue-on-error=false
 spring.datasource.generate-unique-name=false
+
+filesystem.path.tmp=/tmp/
