--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     // Business Dependencies
     compile group: 'tw.edu.ntu.csie', name: 'libsvm', version: '3.17'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.0.RELEASE'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
