--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.servlet.multipart.max-file-size=128KB
-spring.servlet.multipart.max-request-size=128KB
+spring.servlet.multipart.max-file-size=4MB
+spring.servlet.multipart.max-request-size=4MB
 logging.file=/home/hychou0515/mylog.log
 logging.level.root=INFO
 
@@ -17,4 +17,4 @@ spring.jpa.show-sql=true
 spring.datasource.continue-on-error=false
 spring.datasource.generate-unique-name=false
 
-filesystem.path.tmp=/tmp/
+filesystem.path.hash.collision=50
