--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     // Business Dependencies
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
 
