using configuration to inject properties into services

--- a/src/main/resources/service.properties
+++ b/src/main/resources/service.properties
@@ -1,2 +1,2 @@
-path.runnable.base-dir=${java.io.tmpdir}/onlineml/
+path.runnable.base-workingdir=${java.io.tmpdir}/onlineml/
 path.runnable.anaconda-env-base-dir=${java.io.tmpdir}/onlineml/env/
